--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,9 @@ set(CMAKE_CXX_STANDARD 14)
 add_subdirectory(Map)
 add_subdirectory(Vector)
 add_subdirectory(Queue)
+add_subdirectory(Pair)
+add_subdirectory(String)
+add_subdirectory(Set)
+add_subdirectory(Stack)
+add_subdirectory(algorithm)
+add_subdirectory(PTA)
